# tzMCP

./: .gitattributes  .gitignore  .treeignore  AGENTS.md  CONTRIBUTING.md  README.md  config.yaml  gen_whitelist_regex.py  main.py  pyproject.toml  requirements.txt  save_media.py  tasks.py
.github/: CODEOWNERS
.github/workflows/: unit-tests.yml
config/: browser_paths.yaml  media_proxy_config.yaml
docs/: CA_SETUP_GUIDE.md  CONFIG_TAB_GUIDE.md  CONNECT_BROWSER_GUIDE.md  CYA_NOTICE.md  Getting Started.md  Haradening.md  NO_SYSTEM_PROXY.md  PORTABLE_BROWSER_GUIDE.md  PROJECT_SETUP_GUIDE.md
docs/superpowers/plans/: 2026-07-22-test-suite.md  2026-07-23-virtualbox-appliance-transition.md
docs/superpowers/specs/: 2026-07-22-test-suite-design.md
scripts/: app_gui.py  browser_tab.py  clean_unused_packages.py  config_tab.py  domain_tab.py  domain_viewer.py  proxy_tab.py  save_media.py  status_bar.py  tree_maker.py
src/config/: browser_paths.yaml  media_proxy_config.yaml
src/tzMCP/: app_constants.py  app_gui.py  browser_tab.py  cli.py  config_manager.py  config_tab.py  domain_tab.py  gui.py  old-gui.py  paths.py  proxy_control.py  proxy_tab.py  save_media.py  save_media.py.bak
src/tzMCP/browser_plugins/: brave.py  chrome.py  firefox.py  iron.py  kmeleon.py  librewolf.py  opera.py  seamonkey.py  vivaldi.py
src/tzMCP/gui_bits/: browser_tab.py  (+7 more)
tests/: conftest.py
tests/integration/: test_media_saver_response.py
tests/unit/: test_cli.py  test_config_manager.py  test_gen_whitelist_regex.py  test_gui.py  test_hash_tracker.py  test_paths.py  test_save_media_utils.py
(+10 files in other folders)
